src/objects/Agency_Billing_Run__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Xero_Invoice__c.Amount__c</summarizedField>
        <summaryForeignKey>Xero_Invoice__c.Agency_Billing_Run__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Invoices__c</fullName>
        <label>Number of Invoices</label>
        <summaryForeignKey>Xero_Invoice__c.Agency_Billing_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Trigger Sync</inlineHelpText>
        <label>Sync_Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Agency Billing Run</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Agency Billing Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Billing Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>